# IACore

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yaml
CMake/: FindDeps.cmake  IAProjectConfig.cmake  PatchMimalloc.cmake
CMake/Toolchains/: linux-arm64.cmake  linux-x64.cmake  wasm.cmake  windows-arm64.cmake  windows-x64.cmake
CMake/Triplets/: arm64-linux-clang.cmake  arm64-windows-clang.cmake  linux-arm64-clang.cmake  linux-x64-clang.cmake  wasm32-emscripten-clang.cmake  windows-arm64-clang.cmake  windows-x64-clang.cmake  x64-linux-clang.cmake  x64-windows-clang.cmake
Docs/: BUILDING.md
Src/: CMakeLists.txt
Src/IACore/: CMakeLists.txt
Src/IACore/imp/cpp/: AsyncOps.cpp  CLI.cpp  DataOps.cpp  FileOps.cpp  HttpClient.cpp  IACore.cpp  IPC.cpp  JSON.cpp  Logger.cpp  Platform.cpp  ProcessOps.cpp  SIMD.cpp  SocketOps.cpp  StreamReader.cpp  StreamWriter.cpp  StringOps.cpp  Utils.cpp  XML.cpp
Src/IACore/imp/cpp/Http/: Client.cpp  Common.cpp  Server.cpp
Src/IACore/inc/IACore/: AsyncOps.hpp  CLI.hpp  DataOps.hpp  DynamicLib.hpp  Environment.hpp  FileOps.hpp  HttpClient.hpp  IACore.hpp  IATest.hpp  IPC.hpp  JSON.hpp  Logger.hpp  PCH.hpp  Platform.hpp  ProcessOps.hpp  SIMD.hpp  SocketOps.hpp  StreamReader.hpp  StreamWriter.hpp  StringOps.hpp  Utils.hpp  XML.hpp
Src/IACore/inc/IACore/ADT/: RingBuffer.hpp
Src/IACore/inc/IACore/Http/: Client.hpp  Common.hpp  Server.hpp
Tests/: CMakeLists.txt
Tests/Subjects/: CMakeLists.txt
Tests/Subjects/LongProcess/: Main.cpp
Tests/Unit/: AsyncOps.cpp  CCompile.c  CLI.cpp  CMakeLists.txt  DataOps.cpp  Environment.cpp  FileOps.cpp  IPC.cpp  JSON.cpp  Logger.cpp  Main.cpp  Platform.cpp  ProcessOps.cpp  RingBuffer.cpp  SocketOps.cpp  StreamReader.cpp  StreamWriter.cpp  StringOps.cpp  Utils.cpp  XML.cpp
Tests/Unit/Http/: Client.cpp
Tests/Unit/SIMD/: FloatVec4.cpp  IntVec4.cpp
